# arg-dashboard

./: README.md  pyproject.toml
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  objects.txt
docs/_inv/: python_objects.txt
docs/api/: _sidebar.yml  app.qmd  functionname.qmd  index.qmd  scriptname.qmd
docs/pages/: example.ipynb  overview.ipynb
notebooks/: tester.ipynb
scripts/: docs-build-render.sh  rename.py
src/arg_dashboard/: __init__.py  arg.py  arg_layout_force.py  arg_layout_json.py  arg_layout_mindist.py
test/: test_modulename.py
