[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arg-dashboard"
version = "0.1.18"
description = "Project description"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'ipykernel',
    'jupyter',
    'dash',
    'dash-bootstrap-components',
    'pandas',
    'networkx',
    'jupyter-dash',
    'jupyter-server-proxy>=4.4,<5',
    'plotly',
    'seaborn',
    'quartodoc',
    'quarto',
    'pip',
    'pytest',
]

[project.urls]
Homepage = "https://github.com/munch-group/arg-dashboard"
Repository = "https://github.com/munch-group/arg-dashboard"
Documentation = "https://munch-group.org/arg-dashboard"

[project.scripts]
arg-dashboard = "arg_dashboard:arg_dashboard"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
arg_dashboard = ["data/*.txt", "data/*.csv", "data/*.pickle", "data/*.h5"]

[tool.pixi.workspace]
channels = ["conda-forge", "munch-group"]
platforms = ["osx-arm64",  "linux-64"]

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
dash = ">=3.4.0,<4"
dash-bootstrap-components = ">=2.0.4,<3"
pandas = ">=3.0.0,<4"
networkx = ">=3.6.1,<4"
jupyter-dash = ">=0.4.2,<0.5"
plotly = ">=6.5.2,<7"
seaborn = ">=0.13.2,<0.14"
quartodoc = ">=0.11.1,<0.12"
quarto = ">=1.8.27,<2"
pip = ">=26.0,<27"
pytest = ">=9.0.2,<10"


# [tool.pixi.pypi-dependencies]
# Optional PyPI dependencies can be added here
# Note: Some packages may not be available across all platforms

[tool.pixi.feature.dev.dependencies]
setuptools = ">=65.0"
wheel = "*"
pytest = "*"
jupyter = "*"
quarto = "*"
quartodoc = "*"
nbconvert = "*"
anthropic = "*"
git = "*"
git-lfs = "*"
gh = "*"
nbdime = "*"
gitpython = "*"
rpds-py = "*"
jsonschema = "*"
nodejs = "*"
pip = "*"

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.tasks.init]
cmd = "python ./scripts/rename.py && git remote set-url \"origin\" git@github.com:munch-group/$(basename $(git rev-parse --show-toplevel))"

[tool.pixi.tasks.install-dev]
cmd = "pip install -e ."
# cmd = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."
description = "Install the package in development mode"

[tool.pixi.tasks.docs]
cmd = "./scripts/docs-run-notebooks.sh && ./scripts/docs-build-render.sh && git add -u docs"
description = "Run documentation notebooks and build quartodoc api doc pages"

[tool.pixi.tasks.clean]
cmd = "git clean -id"
description = "Removes untracked files and directories but respects your .gitignores"

# [tool.pixi.tasks.add-commit-push]
# cmd = "git add -u && ./scripts/git-commit.sh && git push"
# description = "Release latest version on Github"

[tool.pixi.tasks.test]
cmd = "pytest test/"
description = "Run tests"

[tool.pixi.tasks.commit]
depends-on = ["docs", "test"]
cmd = "./scripts/git-commit.sh"

# [tool.pixi.tasks.bump-changelog]
# cmd = "./scripts/bump_changelog.py --yes"
# description = "Bump version patch and build/release conda packages"

[tool.pixi.tasks.version]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh && echo 'Update released!'"
depends-on = ["commit"]
description = "Bump version patch and push tag to build/upload conda/pypi packages"


